logs/validate.20260408-035143.log
Mode: isolate
Isolate: including Chap38 Chap37 Chap41 Chap18 Chap19 Chap23 Chap02 Chap53
error: unexpected token, expected `;`
   --> src/Chap53/PQMinStPer.rs:425:29
    |
425 | ...                   implies e.0 == (spec_priority(e.1), e.1) by {
    |                       ^^^^^^^

error[E0425]: cannot find type `PQMinResult` in this scope
   --> src/Chap53/PQMinStPer.rs:609:84
    |
609 |     impl<V: StT + Ord + TotalOrder, P: StT + Ord + TotalOrder> std::fmt::Debug for PQMinResult<V, P> {
    |                                                                                    ^^^^^^^^^^^ not found in this scope
    |
help: consider importing this struct
    |
 27 +     use crate::Chap53::PQMinStEph::PQMinStEph::PQMinResult;
    |

error[E0425]: cannot find type `PQMinResult` in this scope
   --> src/Chap53/PQMinStPer.rs:619:86
    |
619 |     impl<V: StT + Ord + TotalOrder, P: StT + Ord + TotalOrder> std::fmt::Display for PQMinResult<V, P> {
    |                                                                                      ^^^^^^^^^^^ not found in this scope
    |
help: consider importing this struct
    |
 27 +     use crate::Chap53::PQMinStEph::PQMinStEph::PQMinResult;
    |

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 5s
Sampled Memory Usage: peak rust_verify RSS: 2002MB, peak z3 RSS: 243MB, min free: 24571MB
Sampled CPU Usage: rust_verify: 23s, z3 children: 2s
